update tailwind package json

--- a/ui.apps/resource/frontend/src/styles/glpg-ctp-112/glpg-ctp-112.scss
+++ b/ui.apps/resource/frontend/src/styles/glpg-ctp-112/glpg-ctp-112.scss
@@ -3,7 +3,7 @@
 // Variables
 @import "variables/_aem-config--glpg-ctp-112";
 @import "variables/__variables-loader--glpg-ctp-112";
-@import "main";
+@import "tailwind-css.scss";
 // Third party
 @import "thirdparty/__thirdparty-loader--glpg-ctp-112";
 
