--- a/ui.apps/resource/frontend/src/styles/glpg-ctp-112/components/__components-loader--glpg-ctp-112.scss
+++ b/ui.apps/resource/frontend/src/styles/glpg-ctp-112/components/__components-loader--glpg-ctp-112.scss
@@ -15,6 +15,7 @@
 @import "../../../components/molecules/headline-text/headline-text.scss";
 @import "../../../components/molecules/teaser-gallery/teaser-gallery.scss";
 @import "../../../components/molecules/box/box.scss";
+@import "../../../components/molecULES/fluid-carousel/fluid-carousel.scss";
 
 // @import "../../../components/atoms/input/input.scss";
 // @import "../../../components/atoms/checkbox/checkbox.scss";
