--- a/ui.apps/resource/frontend/src/styles/hbk-111/variables/_colors-variables--hbk-111.scss
+++ b/ui.apps/resource/frontend/src/styles/hbk-111/variables/_colors-variables--hbk-111.scss
@@ -3,7 +3,7 @@
 
 // ----------------- BrandX color pleate ------------
 // Primary Colors
-$primary         : #00BFB2; // cyan
+$primary         : #33b6b1; // cyan
 // $primary-light: #739FCA; //light
 // $primary2   : #DADADA;
 // $primary3   : #000000;
