card style updated

--- a/ui.apps/resource/frontend/src/styles/hbk-111/storybook.scss
+++ b/ui.apps/resource/frontend/src/styles/hbk-111/storybook.scss
@@ -1,5 +1,5 @@
 
-@import "./tailwind-dev.scss";
+@import "tailwind-dev.scss";
 @import "variables/_aem-config--hbk-111";
 @import "variables/__variables-loader--hbk-111";
 @import "thirdparty/__thirdparty-loader--hbk-111";
