--- a/ui.apps/resource/frontend/src/components/molecules/card/card.scss
+++ b/ui.apps/resource/frontend/src/components/molecules/card/card.scss
@@ -1,291 +1,12 @@
+// @import '../../../styles/hbk-111/tailwind-dev.scss';
+
+// .card {
+//     @extend .flex;
+// }
+
 @media screen {
     [data-site-id="#{$site-id}"] {
         .card {
-            &__inner {     
-                a {
-                    &:hover {
-                        text-decoration: none;
-                    }
-                }  
-
-                &__item {
-                    display: flex;
-                    max-width: 100%;
-                    transition: 0.5s;
-                    align-items: center;
-                    flex-direction: column;
-                    min-height: rem(200px);
-                    margin-bottom: rem(30px);
-                    justify-content: center;
-                    border: 2px solid transparent;
-                    background-color: $color-athens-gray;
-                    @include media-breakpoint-down (md) {
-                        min-height: rem(180px);
-                    }
-                    @include media-breakpoint-down (sm) {
-                        flex-direction: row;
-                        min-height: rem(120px);
-                        padding-left: rem(30px);
-                        margin: 0 auto rem(17px);
-                        justify-content: flex-start;
-                    }
-                    &:hover {
-                        transition: 0.5s;
-                        background-color: transparent;
-                        border: 2px solid $secondary;
-                    }
-                    .icon {
-                        display: flex;
-                        width: rem(72px);
-                        height: rem(60px);
-                        justify-content: center;
-                        align-items: center;
-                        
-                        img {
-                            max-width: 100%;
-                            max-height: 100%;
-                        }
-                        @include media-breakpoint-down (md) {
-                            width: rem(56px);
-                            height: rem(54px);
-                        }
-                        @include media-breakpoint-down (sm) {
-                            width: rem(54px);
-                            height: rem(52px);
-                            margin-right: rem(30px);
-                        }
-                    }
-                    .title {  
-                        color: #2F3332;
-                        font-size: 22px;
-                        font-weight: 600;
-                        line-height: 30px;
-                        padding-top: 20px;
-                        text-align: center;
-                        letter-spacing: -0.08px;
-                        @include media-breakpoint-down (md) {
-                            padding-top: 22px;
-                            font-size: 16px;
-                        }
-                        @include media-breakpoint-down (sm) {
-                            font-size: 18px;
-                            letter-spacing: 0;
-                            line-height: 24px;
-                            padding-top: 0;
-                            flex: 1;
-                            text-align: left;
-                        }
-                    }
-
-                }
-                
-                // inline style
-                &__item--inline {
-                    background-color: #f3f5f8;
-                    margin-bottom: rem(20px);
-
-                    .icon-text-wrap {
-                        display: flex;
-                        align-items: center;
-                        justify-content: center;
-
-                        .icon {
-                            display: flex;
-                            align-items: center;
-                            justify-content: flex-end;
-                            max-width: 40%;
-                            
-                        }
-
-                        .title {
-                            font-weight: 600;
-                            padding-top: 0;
-                            color: #2F3332;
-                        }
-                    }
-                    .card__inner--footer {
-                        background: #004C45;
-                        color: $white;
-                        display: flex;
-                        align-items: center;
-
-                    }
-
-                    &:not(.card__inner__item--row) {
-                        .icon-text-wrap {
-                            min-height: 125px;
-                            padding: rem(10px);
-
-                            .icon {
-                                img {
-                                    max-width: 69px;
-                                }
-                            }
-
-                            .title {
-                                font-size: rem(20px);
-                                padding-left: rem(15px);
-                            }
-                        }
-                        .card__inner--footer {
-                            justify-content: center;                            
-                            font-size: rem(20px);
-                            min-height: rem(85px);
-                            padding: rem(15px) rem(10px);
-                        }
-                    }                    
-                }
-
-                &__item--row {
-                    @include  media-breakpoint-up(lg){
-                        display: flex;
-                        
-                        .icon-text-wrap {
-                            width: 31%;
-                            min-width: rem(300px);
-                            min-height: rem(140px);
-                            padding: rem(20px);
-
-                            .title {
-                                font-size: rem(24px);
-                                padding-left: rem(35px);
-                            }
-                        }
-                        
-                        .card__inner--footer {
-                            flex: 1;
-                            padding: rem(16px) rem(45px);
-                            text-align: left;
-                            font-size: rem(18px);
-                        }
-                    }
-
-                    @include  media-breakpoint-down(md){
-                        .icon-text-wrap {
-                            min-height: rem(97px);
-                            padding: rem(20px);
-
-                            .title {
-                                padding-left: rem(23px);
-                            }
-
-                            .icon {
-                                svg,
-                                img {
-                                    height: rem(53px);
-                                    width: auto;
-                                }
-                            }
-                        }
-
-                        .card__inner--footer {
-                            font-size: rem(18px);
-                            padding: rem(10px) rem(20px);
-                        }
-                    }
-                }
-
-                &__feature{
-                    &-item{
-                        display: flex;
-                        max-width: 100%;
-                        min-height: rem(310px);
-                        flex-direction: column;
-                        margin-bottom: rem(30px);
-                        height: calc(100% - 30px);
-                        padding: rem(50px) rem(40px);
-                        background-color: $color-athens-gray;
-                        @include media-breakpoint-down(sm){
-                            padding: rem(30px) rem(25px);
-                        }
-                        &__top{
-                            display: flex;
-                            margin-bottom: rem(25px);
-                            @include media-breakpoint-down(sm){
-                                flex-direction: column;
-                            }
-                            .icon{
-                                max-width: rem(88px);
-                                margin-right: rem(40px);
-                                @include media-breakpoint-down(sm){
-                                    margin-right: 0;
-                                    margin-bottom: rem(20px);
-                                }
-                                img{
-                                    max-width: 100%;
-                                    max-height: rem(110px);
-                                }
-                            }
-                            .title{
-                                flex: 1;
-                                display: flex;
-                                align-items: center;
-                                h3{
-                                    margin-bottom: 0;
-                                    color: $secondary;
-                                    font-size: rem(40px);
-                                    font-family: $Verveine;
-                                    line-height: rem(40px);
-                                }
-                            }
-                        }
-                        &__details{
-                            //margin-bottom: rem(30px);
-                            p{
-                                color: $color-cape-code;
-                            }
-                        }   
-                    }
-                }
-
-                // For card Step
-                &__step{
-                    &-item{
-                        display: flex;
-                        max-width: 100%;
-                        min-height: rem(290px);
-                        flex-direction: column;
-                        margin-bottom: rem(30px);
-                        height: calc(100% - 30px);
-                        padding: rem(35px) rem(40px);
-                        background-color: $color-athens-gray;
-                        @include media-breakpoint-down(md){
-                            padding: rem(35px) rem(25px);
-                        }
-                        @include media-breakpoint-down(sm){
-                            padding: rem(35px);
-                        }
-                        &__top{
-                            display: flex;
-                            justify-content: center;
-                            margin-bottom: rem(30px);
-                            .icon{
-                                margin-right: rem(20px);
-                                img{
-                                    max-width: 100%;
-                                    max-height: rem(55px);
-                                }
-                            }
-                            .title{
-                                display: flex;
-                                align-items: center;
-                                h3{
-                                    margin-bottom: 0;
-                                    font-weight: 600;
-                                    font-size: rem(22px);
-                                    line-height: rem(30px);
-                                    color: $color-cape-code;
-                                }
-                            }
-                        }
-                        &__details{
-                            p{
-                                color: $color-cape-code;
-                            }
-                        }   
-                    }
-                }
-            }
         }
     }
 }
