--- a/ui.apps/resource/frontend/src/components/molecules/image-extension/image-extension.scss
+++ b/ui.apps/resource/frontend/src/components/molecules/image-extension/image-extension.scss
@@ -7,10 +7,10 @@
     }
 
     .image-container {
-      display: flex;
+      // display: flex;
 
       a img {
-        width: 100%;
+        // width: 100%;
       }
     }
 
