--- a/ui.apps/resource/frontend/src/styles/hbk-111/components/__components-loader--hbk-111.scss
+++ b/ui.apps/resource/frontend/src/styles/hbk-111/components/__components-loader--hbk-111.scss
@@ -26,7 +26,7 @@
 // @import "../../../components/molecules/separator/separator.scss";
 // @import "../../../components/molecules/header/header.scss";
 // @import "../../../components/molecules/main-navigation/main-navigation.scss";
-// @import "../../../components/molecules/card/card.scss";
+@import "../../../components/molecules/card/card.scss";
 // @import "../../../components/molecules/footer/footer.scss";
 // @import "../../../components/molecules/box/box.scss";
 // @import "../../../components/molecules/medical-condition-dropdown/medical-condition-dropdown.scss";
