--- a/ui.apps/resource/frontend/src/styles/hbk-111/tailwind-dev.scss
+++ b/ui.apps/resource/frontend/src/styles/hbk-111/tailwind-dev.scss
@@ -2783,23 +2783,6 @@ textarea.form-control.is-invalid {
 		transform: scale(1);
 	}
 }
-.quote-text blockquote {
-	font-style: italic;
-	letter-spacing: 0.05em;
-        color: #33b6b1;
-}
-.quote-text blockquote::before,
-    .quote-text blockquote::after{
-        content: '"';
-        display: inline;
-        color: #33b6b1; 
-    }
-.quote-text blockquote::before {
-	margin-right: 0.125rem;
-}
-.quote-text blockquote::after {
-	margin-left: 0.125rem;
-}
 .pointer-events-none {
 	pointer-events: none;
 }
@@ -3235,117 +3218,167 @@ textarea.form-control.is-invalid {
 .ease-in-out {
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+/* 
+@layer components{
+    .quote-text blockquote{
+        @apply text-primary italic tracking-wider
+    }
+    .quote-text blockquote::before,
+    .quote-text blockquote::after{
+        content: '"';
+        display: inline;
+        color: #33b6b1; 
+    }
+
+    .quote-text blockquote::before{
+        @apply mr-0.5
+    }
+    .quote-text blockquote::after{
+        @apply ml-0.5
+    }
+} */
+
 .before\:absolute::before {
 	content: "";
 	position: absolute;
 }
+
 .before\:h-4::before {
 	content: "";
 	height: 1rem;
 }
+
 .before\:w-4::before {
 	content: "";
 	width: 1rem;
 }
+
 .before\:bg-blue-500::before {
 	content: "";
 	--tw-bg-opacity: 1;
 	background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
 }
+
 .before\:content-\[\'hello\'\]::before {
 	content: 'hello';
 }
+
 .hover\:border-transparent:hover {
 	border-color: transparent;
 }
+
 .hover\:bg-gray-100:hover {
 	--tw-bg-opacity: 1;
 	background-color: rgba(243, 244, 246, var(--tw-bg-opacity));
 }
+
 .hover\:bg-blue-700:hover {
 	--tw-bg-opacity: 1;
 	background-color: rgba(29, 78, 216, var(--tw-bg-opacity));
 }
+
 .hover\:bg-purple-700:hover {
 	--tw-bg-opacity: 1;
 	background-color: rgba(109, 40, 217, var(--tw-bg-opacity));
 }
+
 .hover\:text-black:hover {
 	--tw-text-opacity: 1;
 	color: rgba(0, 0, 0, var(--tw-text-opacity));
 }
+
 .hover\:underline:hover {
 	text-decoration: underline;
 }
+
 .hover\:no-underline:hover {
 	text-decoration: none;
 }
+
 .hover\:opacity-75:hover {
 	opacity: 0.75;
 }
+
 .hover\:shadow-lg:hover {
 	--tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+
 .hover\:outline-none:hover {
 	outline: 2px solid transparent;
 	outline-offset: 2px;
 }
+
 .focus\:border-transparent:focus {
 	border-color: transparent;
 }
+
 .focus\:bg-blue-700:focus {
 	--tw-bg-opacity: 1;
 	background-color: rgba(29, 78, 216, var(--tw-bg-opacity));
 }
+
 .focus\:bg-purple-700:focus {
 	--tw-bg-opacity: 1;
 	background-color: rgba(109, 40, 217, var(--tw-bg-opacity));
 }
+
 .focus\:no-underline:focus {
 	text-decoration: none;
 }
+
 .focus\:opacity-100:focus {
 	opacity: 1;
 }
+
 .focus\:shadow-lg:focus {
 	--tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+
 .focus\:shadow-none:focus {
 	--tw-shadow: 0 0 #0000;
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+
 .focus\:outline-none:focus {
 	outline: 2px solid transparent;
 	outline-offset: 2px;
 }
+
 .focus\:ring-4:focus {
 	--tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
 	--tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
 	box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
+
 .focus\:ring-0:focus {
 	--tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
 	--tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
 	box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
+
 .focus\:ring-gray-200:focus {
 	--tw-ring-opacity: 1;
 	--tw-ring-color: rgba(229, 231, 235, var(--tw-ring-opacity));
 }
+
 .active\:bg-blue-800:active {
 	--tw-bg-opacity: 1;
 	background-color: rgba(30, 64, 175, var(--tw-bg-opacity));
 }
+
 .active\:bg-purple-800:active {
 	--tw-bg-opacity: 1;
 	background-color: rgba(91, 33, 182, var(--tw-bg-opacity));
 }
+
 .active\:shadow-lg:active {
 	--tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+
 @media (min-width: 768px) {
 
 	.md\:mb-0 {
@@ -3368,6 +3401,7 @@ textarea.form-control.is-invalid {
 		flex-direction: row;
 	}
 }
+
 @media (min-width: 1024px) {
 
 	.lg\:block {
@@ -3378,6 +3412,7 @@ textarea.form-control.is-invalid {
 		display: none;
 	}
 }
+
 @media (min-width: 1280px) {
 
 	.xl\:text-center {
