--- a/ui.apps/resource/frontend/src/styles/hbk-111/components/__components-loader--hbk-111.scss
+++ b/ui.apps/resource/frontend/src/styles/hbk-111/components/__components-loader--hbk-111.scss
@@ -9,12 +9,14 @@
 @import "../../../components/atoms/select/select.scss";
 
 // /*! =COMPONENTS */
-@import "../../../components/molecules/hero-header/hero-header.scss";
+// @import "../../../components/molecules/hero-header/hero-header.scss";
 @import "../../../components/molecules/button-link/button-link.scss";
-@import "../../../components/molecules/button-group/button-group.scss";
+// @import "../../../components/molecules/button-group/button-group.scss";
 @import "../../../components/molecules/headline-text/headline-text.scss";
-@import "../../../components/molecules/teaser-gallery/teaser-gallery.scss";
-@import "../../../components/molecules/box/box.scss";
+@import "../../../components/molecules/header/header.scss";
+@import "../../../components/molecules/main-navigation/main-navigation.scss";
+// @import "../../../components/molecules/teaser-gallery/teaser-gallery.scss";
+// @import "../../../components/molecules/box/box.scss";
 
 // @import "../../../components/atoms/input/input.scss";
 // @import "../../../components/atoms/checkbox/checkbox.scss";
