--- a/ui.apps/resource/frontend/src/styles/hbk-111/tailwind/tailwind.css
+++ b/ui.apps/resource/frontend/src/styles/hbk-111/tailwind/tailwind.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+/* @screen lg{
+   .image-extension a{
+    max-width: 250px;
+   }
+
+} */
+
+/* @media screen(lg){
+    .image-extension a{
+     max-width: 250px;
+    }
+ 
+ } */
