--- a/ui.apps/resource/frontend/src/styles/hbk-111/components/__components-loader--hbk-111.scss
+++ b/ui.apps/resource/frontend/src/styles/hbk-111/components/__components-loader--hbk-111.scss
@@ -15,6 +15,7 @@
 @import "../../../components/molecules/headline-text/headline-text.scss";
 @import "../../../components/molecules/header/header.scss";
 @import "../../../components/molecules/main-navigation/main-navigation.scss";
+@import "../../../components/molecules/footer/footer.scss";
 // @import "../../../components/molecules/teaser-gallery/teaser-gallery.scss";
 // @import "../../../components/molecules/box/box.scss";
 
@@ -29,7 +30,6 @@
 // @import "../../../components/molecules/header/header.scss";
 // @import "../../../components/molecules/main-navigation/main-navigation.scss";
 // @import "../../../components/molecules/card/card.scss";
-// @import "../../../components/molecules/footer/footer.scss";
 // @import "../../../components/molecules/box/box.scss";
 // @import "../../../components/molecules/medical-condition-dropdown/medical-condition-dropdown.scss";
 // @import "../../../components/molecules/search-filter-overlay/search-filter-overlay.scss";
