--- a/ui.apps/resource/frontend/src/styles/hbk-111/tailwind-dev.scss
+++ b/ui.apps/resource/frontend/src/styles/hbk-111/tailwind-dev.scss
@@ -5693,6 +5693,34 @@ textarea.form-control.is-invalid {
   }
 }
 
+.container {
+  max-width: 100%;
+}
+
+@media (min-width: 480px) {
+  .container {
+    max-width: 1200px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 1200px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1200px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    max-width: 1200px;
+  }
+}
+
 .sr-only {
   position: absolute;
   width: 1px;
