--- a/ui.apps/resource/frontend/src/styles/hbk-111/tailwind-build.scss
+++ b/ui.apps/resource/frontend/src/styles/hbk-111/tailwind-build.scss
@@ -561,78 +561,6 @@ video {
   border-color: rgba(63, 63, 63, var(--tw-border-opacity));
 }
 
-@font-face {
-  font-family: 'Roboto';
-
-  font-style: normal;
-
-  font-weight: 400;
-
-  font-display: swap;
-
-  src: local('Roboto Regular'), local('Roboto-Regular'), url(fonts/Roboto/Roboto-Regular.ttf) format('truetype');
-}
-
-@font-face {
-  font-family: 'Roboto';
-
-  font-style: italic;
-
-  font-weight: 400;
-
-  font-display: swap;
-
-  src: local('Roboto Italic'), local('Roboto-Italic'), url(fonts/Roboto/Roboto-Italic.ttf) format('truetype');
-}
-
-@font-face {
-  font-family: 'Roboto';
-
-  font-style: normal;
-
-  font-weight: 500;
-
-  font-display: swap;
-
-  src: local('Roboto Medium'), local('Roboto-Medium'), url(fonts/Roboto/Roboto-Medium.ttf) format('truetype');
-}
-
-@font-face {
-  font-family: 'Roboto';
-
-  font-style: italic;
-
-  font-weight: 500;
-
-  font-display: swap;
-
-  src: local('Roboto MediumItalic'), local('Roboto-MediumItalic'), url(fonts/Roboto/Roboto-MediumItalic.ttf) format('truetype');
-}
-
-@font-face {
-  font-family: 'Roboto';
-
-  font-style: normal;
-
-  font-weight: 700;
-
-  font-display: swap;
-
-  src: local('Roboto Bold'), local('Roboto-Bold'), url(fonts/Roboto/Roboto-Bold.ttf) format('truetype');
-}
-
-@font-face {
-  font-family: 'Roboto';
-
-  font-style: italic;
-
-  font-weight: 700;
-
-  font-display: swap;
-
-  src: local('Roboto BoldItalic'), local('Roboto-BoldItalic'), url(fonts/Roboto/Roboto-BoldItalic.ttf) format('truetype');
-}
-
 .container {
   width: 100%;
   margin-right: auto;
@@ -969,130 +897,6 @@ video {
   opacity: 1;
 }
 
-.carousel-inner::after {
-  display: block;
-  clear: both;
-  content: "";
-}
-
-.carousel-item {
-  display: none;
-  margin-right: -100%;
-  -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
-  transition: transform 0.6s ease-in-out;
-}
-
-.carousel-item.active {
-  display: block;
-}
-
-.carousel-control-prev {
-  z-index: 1;
-  width: 15%;
-  color: #fff;
-  background: none;
-  opacity: 0.5;
-  transition: opacity 0.15s ease;
-}
-
-.carousel-control-next {
-  z-index: 1;
-  width: 15%;
-  color: #fff;
-  background: none;
-  opacity: 0.5;
-  transition: opacity 0.15s ease;
-}
-
-.carousel-control-prev:hover {
-  color: #fff;
-  opacity: 0.9;
-}
-
-.carousel-control-prev:focus {
-  color: #fff;
-  opacity: 0.9;
-}
-
-.carousel-control-next:hover {
-  color: #fff;
-  opacity: 0.9;
-}
-
-.carousel-control-next:focus {
-  color: #fff;
-  opacity: 0.9;
-}
-
-.carousel-control-prev-icon {
-  width: 2rem;
-  height: 2rem;
-  background-position: 50%;
-  background-size: 100% 100%;
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e");
-}
-
-.carousel-control-next-icon {
-  width: 2rem;
-  height: 2rem;
-  background-position: 50%;
-  background-size: 100% 100%;
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
-}
-
-.carousel-indicators {
-  z-index: 2;
-  margin-right: 15%;
-  margin-left: 15%;
-  list-style: none;
-}
-
-.carousel-indicators [data-bs-target] {
-  box-sizing: content-box;
-  flex: 0 1 auto;
-  width: 30px;
-  height: 3px;
-  padding: 0;
-  margin-right: 3px;
-  margin-left: 3px;
-  -webkit-text-indent: -999px;
-  text-indent: -999px;
-  cursor: pointer;
-  background-color: #fff;
-  background-clip: padding-box;
-  border: 0;
-  border-top: 10px solid transparent;
-  border-bottom: 10px solid transparent;
-  opacity: 0.5;
-  transition: opacity 0.6s ease;
-}
-
-.carousel-indicators .active {
-  opacity: 1;
-}
-
-.carousel-caption {
-  right: 15%;
-  bottom: 1.25rem;
-  left: 15%;
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-  color: #fff;
-}
-
-.visually-hidden {
-  position: absolute !important;
-  width: 1px !important;
-  height: 1px !important;
-  padding: 0 !important;
-  margin: -1px !important;
-  overflow: hidden !important;
-  clip: rect(0, 0, 0, 0) !important;
-  white-space: nowrap !important;
-  border: 0 !important;
-}
-
 @media (prefers-reduced-motion: reduce) {
   .form-control::file-selector-button {
     transition: none;
@@ -1108,22 +912,6 @@ video {
   }
 
   .modal.fade .modal-dialog {
-    transition: none;
-  }
-
-  .carousel-item {
-    transition: none;
-  }
-
-  .carousel-control-prev {
-    transition: none;
-  }
-
-  .carousel-control-next {
-    transition: none;
-  }
-
-  .carousel-indicators [data-bs-target] {
     transition: none;
   }
 }
@@ -1867,6 +1655,34 @@ video {
   }
 }
 
+.container {
+  max-width: 100%;
+}
+
+@media (min-width: 480px) {
+  .container {
+    max-width: 1200px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 1200px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1200px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    max-width: 1200px;
+  }
+}
+
 .pointer-events-none {
   pointer-events: none;
 }
@@ -1887,6 +1703,11 @@ video {
   position: relative;
 }
 
+.inset-x-0 {
+  left: 0px;
+  right: 0px;
+}
+
 .top-0 {
   top: 0px;
 }
@@ -1897,10 +1718,6 @@ video {
 
 .top-1\/2 {
   top: 50%;
-}
-
-.right-0 {
-  right: 0px;
 }
 
 .bottom-0 {
@@ -1923,10 +1740,6 @@ video {
   grid-column: span 8 / span 8;
 }
 
-.float-left {
-  float: left;
-}
-
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -1945,8 +1758,8 @@ video {
   margin-top: 1.5rem;
 }
 
-.mt-8 {
-  margin-top: 2rem;
+.mt-7 {
+  margin-top: 1.75rem;
 }
 
 .-mt-28 {
@@ -1971,6 +1784,10 @@ video {
 
 .mb-4 {
   margin-bottom: 1rem;
+}
+
+.mb-9 {
+  margin-bottom: 2.25rem;
 }
 
 .mb-28 {
@@ -2202,10 +2019,6 @@ video {
   justify-content: flex-end;
 }
 
-.justify-center {
-  justify-content: center;
-}
-
 .justify-between {
   justify-content: space-between;
 }
@@ -2215,8 +2028,8 @@ video {
        column-gap: 1.25rem;
 }
 
-.overflow-hidden {
-  overflow: hidden;
+.gap-y-8 {
+  row-gap: 2rem;
 }
 
 .overflow-y-auto {
@@ -2254,10 +2067,6 @@ video {
   border-bottom-left-radius: 0.375rem;
 }
 
-.border-0 {
-  border-width: 0px;
-}
-
 .border {
   border-width: 1px;
 }
@@ -2278,6 +2087,10 @@ video {
   border-bottom-width: 2px;
 }
 
+.border-b-3 {
+  border-bottom-width: 3px;
+}
+
 .border-b {
   border-bottom-width: 1px;
 }
@@ -2286,14 +2099,24 @@ video {
   border-style: none;
 }
 
+.border-secondary {
+  --tw-border-opacity: 1;
+  border-color: rgba(51, 182, 177, var(--tw-border-opacity));
+}
+
 .border-gray-55 {
   --tw-border-opacity: 1;
-  border-color: rgba(224, 224, 224, var(--tw-border-opacity));
+  border-color: rgba(250, 250, 250, var(--tw-border-opacity));
 }
 
 .border-gray-200 {
   --tw-border-opacity: 1;
   border-color: rgba(63, 63, 63, var(--tw-border-opacity));
+}
+
+.bg-primary {
+  --tw-bg-opacity: 1;
+  background-color: rgba(0, 51, 90, var(--tw-bg-opacity));
 }
 
 .bg-ternary {
@@ -2311,12 +2134,12 @@ video {
   background-color: rgba(245, 245, 245, var(--tw-bg-opacity));
 }
 
-.bg-gray-100 {
+.bg-gray-55 {
   --tw-bg-opacity: 1;
   background-color: rgba(250, 250, 250, var(--tw-bg-opacity));
 }
 
-.hover\:bg-gray-100:hover {
+.hover\:bg-gray-55:hover {
   --tw-bg-opacity: 1;
   background-color: rgba(250, 250, 250, var(--tw-bg-opacity));
 }
@@ -2355,11 +2178,6 @@ video {
 
 .p-8 {
   padding: 2rem;
-}
-
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
 }
 
 .px-6 {
@@ -2410,12 +2228,28 @@ video {
   padding-top: 5rem;
 }
 
+.pt-28 {
+  padding-top: 88px;
+}
+
 .pr-5 {
   padding-right: 1.25rem;
 }
 
 .pr-8 {
   padding-right: 2rem;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
+}
+
+.pb-8 {
+  padding-bottom: 2rem;
+}
+
+.pb-12 {
+  padding-bottom: 3rem;
 }
 
 .pl-0 {
@@ -2426,10 +2260,6 @@ video {
   padding-left: 1.25rem;
 }
 
-.pl-7 {
-  padding-left: 1.75rem;
-}
-
 .pl-12 {
   padding-left: 3rem;
 }
@@ -2438,18 +2268,9 @@ video {
   text-align: left;
 }
 
-.text-center {
-  text-align: center;
-}
-
 .text-base {
   font-size: 16px;
   line-height: 20px;
-}
-
-.text-lg {
-  font-size: 20px;
-  line-height: 28px;
 }
 
 .text-xl {
@@ -2459,10 +2280,6 @@ video {
 
 .font-medium {
   font-weight: 500;
-}
-
-.font-semibold {
-  font-weight: 600;
 }
 
 .font-bold {
@@ -2518,10 +2335,6 @@ video {
 }
 
 .hover\:no-underline:hover {
-  text-decoration: none;
-}
-
-.focus\:no-underline:focus {
   text-decoration: none;
 }
 
@@ -2618,19 +2431,50 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* @screen lg{
-   .image-extension a{
-    max-width: 250px;
+/* @layer base {
+   @font-face {
+   font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: local('Roboto Regular'), local('Roboto-Regular'), url(fonts/Roboto/Roboto-Regular.ttf) format('truetype');
    }
-
-} */
-
-/* @media screen(lg){
-    .image-extension a{
-     max-width: 250px;
+   @font-face {
+      font-family: 'Roboto';
+      font-style: italic;
+      font-weight: 400;
+      font-display: swap;
+      src: local('Roboto Italic'), local('Roboto-Italic'), url(fonts/Roboto/Roboto-Italic.ttf) format('truetype');
+   }
+   @font-face {
+      font-family: 'Roboto';
+      font-style: normal;
+      font-weight: 500;
+      font-display: swap;
+      src: local('Roboto Medium'), local('Roboto-Medium'), url(fonts/Roboto/Roboto-Medium.ttf) format('truetype');
     }
- 
- } */
+    @font-face {
+      font-family: 'Roboto';
+      font-style: italic;
+      font-weight: 500;
+      font-display: swap;
+      src: local('Roboto MediumItalic'), local('Roboto-MediumItalic'), url(fonts/Roboto/Roboto-MediumItalic.ttf) format('truetype');
+    }
+    @font-face {
+      font-family: 'Roboto';
+      font-style: normal;
+      font-weight: 700;
+      font-display: swap;
+      src: local('Roboto Bold'), local('Roboto-Bold'), url(fonts/Roboto/Roboto-Bold.ttf) format('truetype');
+    }
+    @font-face {
+      font-family: 'Roboto';
+      font-style: italic;
+      font-weight: 700;
+      font-display: swap;
+      src: local('Roboto BoldItalic'), local('Roboto-BoldItalic'), url(fonts/Roboto/Roboto-BoldItalic.ttf) format('truetype');
+    }
+} */
 
 @media (min-width: 480px) {
 }
@@ -2655,55 +2499,25 @@ video {
   .md\:flex-row {
     flex-direction: row;
   }
+
+  .md\:gap-x-6 {
+    -moz-column-gap: 1.5rem;
+         column-gap: 1.5rem;
+  }
+
+  .md\:gap-y-0 {
+    row-gap: 0px;
+  }
 }
 
 @media (min-width: 1024px) {
-  .lg\:container {
-    width: 100%;
-    margin-right: auto;
-    margin-left: auto;
-    padding-right: 20px;
-    padding-left: 20px;
-  }
-
-  @media (min-width: 480px) {
-    .lg\:container {
-      max-width: 480px;
-    }
-  }
-
-  @media (min-width: 768px) {
-    .lg\:container {
-      max-width: 768px;
-    }
-  }
-
-  @media (min-width: 1024px) {
-    .lg\:container {
-      max-width: 1024px;
-    }
-  }
-
-  @media (min-width: 1280px) {
-    .lg\:container {
-      max-width: 1280px;
-    }
-  }
-
-  @media (min-width: 1360px) {
-    .lg\:container {
-      max-width: 1360px;
-    }
-  }
-
-  @media (min-width: 1680px) {
-    .lg\:container {
-      max-width: 1680px;
-    }
-  }
-
   .lg\:relative {
     position: relative;
+  }
+
+  .lg\:inset-x-auto {
+    left: auto;
+    right: auto;
   }
 
   .lg\:top-full {
@@ -2712,6 +2526,11 @@ video {
 
   .lg\:-left-1\/2 {
     left: -50%;
+  }
+
+  .lg\:my-4 {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
   }
 
   .lg\:mr-11 {
@@ -2751,7 +2570,7 @@ video {
     border-color: rgba(245, 245, 245, var(--tw-border-opacity));
   }
 
-  .lg\:hover\:bg-gray-100:hover {
+  .lg\:hover\:bg-gray-55:hover {
     --tw-bg-opacity: 1;
     background-color: rgba(250, 250, 250, var(--tw-bg-opacity));
   }
@@ -2794,3 +2613,5 @@ video {
 
 @media (min-width: 1680px) {
 }
+
+
