--- a/ui.apps/resource/frontend/src/styles/hbk-111/components/__components-loader--hbk-111.scss
+++ b/ui.apps/resource/frontend/src/styles/hbk-111/components/__components-loader--hbk-111.scss
@@ -16,6 +16,8 @@
 @import "../../../components/molecules/header/header.scss";
 @import "../../../components/molecules/main-navigation/main-navigation.scss";
 @import "../../../components/molecules/footer/footer.scss";
+@import "../../../components/molecules/hero-carousel/hero-carousel.scss";
+
 // @import "../../../components/molecules/teaser-gallery/teaser-gallery.scss";
 // @import "../../../components/molecules/box/box.scss";
 
